Remove .grid--nowrap modifier. This will be addressed by this Github issue: https://github.com/EtchUK/Etch.OrchardCore.ThemeBoilerplate/issues/98

--- a/content/Assets/Styles/components/grid/_default.scss
+++ b/content/Assets/Styles/components/grid/_default.scss
@@ -27,7 +27,3 @@
         }
     }
 }
-
-.grid--nowrap {
-    flex-wrap: nowrap;
-}
